--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3300/testdb
     username: root
-    password: 9133
+    password: rootpassword
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
